src/css/custom.css
/* ... */
* {
  font-family: Patron,sans-serif;
  box-sizing: border-box;
}

*, :after, :before {
  box-sizing: border-box;
}

.container {
  margin-left: auto;
  margin-right: auto;
  padding-left: 15px;
  padding-right: 15px;
  width: 100%;
}

.container code {
  max-width: 100%;
}

code > span > span {
    white-space: pre-wrap;
}

.container code > span {
  display: block;
}


html[data-theme='dark'] {
  --ifm-toc-border-color: var(--v-black);
}

div .admonition-content > p > a {
  color: #f15d61 !important;
}

div .admonition-content > ul > li > a {
  color: #f15d61 !important;
}

.logo__col {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.footer > div {
  max-width: 1180px;
}

.footer__logo {
  margin-top: 0px;
  padding-top: 0px;
  max-width: 150px;
}

.footer__copyright > p {
  font-weight: 300;
  line-height: 30px;
  letter-spacing: .025rem;
  text-transform: capitalize;
}

.social-links {
  display: flex;
}

.social-links > a {
  text-decoration: none;
  display: block;
  transition: all 150ms ease;
  margin-right: 0.75em;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
  margin-top: 0;
}

table {
  display: table;
  width: 100%;
}

table tr td {
  text-align: left !important;
}

.table-of-contents__link, .menu__link {
  font-weight: 100 !important;
  font-size: 14px;
  letter-spacing: .025rem;
}

.navbar {
  width: auto;
  height: 86px;
  top: 0;
  left: 0;
  right: 0;
  transition: all 75ms ease;
  box-shadow: 1px 3px 5px #f2f2f2;
  background-color: white !important;
  padding-left: 15px;
  padding-right: 15px;
}

.navbar__inner {
  margin-left: auto;
  margin-right: auto;
  padding-left: auto;
  padding-right: auto;
  width: 100%;
  background-image: initial;
  background-position-x: initial;
  background-position-y: initial;
  background-size: initial;
  background-repeat-x: initial;
  background-repeat-y: initial;
  background-attachment: initial;
  background-origin: initial;
  background-clip: initial;
  background-color: white !important;
}

.navbar__items, .navbar__items--right {
  color: #2f2c2c;
  font-size: 17px;
  letter-spacing: .060rem;
  line-height: 30px;
  font-weight: bold;
}

div.navbar__items a {
  padding-left: 0.25em;
}

.navbarHidden_node_modules-\@docusaurus-theme-classic-lib-next-theme-Navbar-styles-module {
  transform: none !important;
}

div[class^="navbarHideable"] {
  transform: none !important;
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}


@font-face {
  font-family: 'Patron';
  font-weight: normal;
  font-style: normal;
  src: local('example'),
    url('../fonts/Patron-Regular.otf') format('truetype');
}

@font-face {
  font-family: 'Patron';
  font-weight: 150;
  font-style: normal;
  src: local('example'),
    url('../fonts/Patron-Light.otf') format('truetype');
}

@font-face {
  font-family: 'Patron';
  font-weight: bold;
  font-style: normal;
  src: local('example'),
    url('../fonts/Patron-Bold.otf') format('truetype');
}

@font-face {
  font-family: 'Courier Prime';
  font-weight: normal;
  font-style: normal;
  src: local('example'),
    url('../fonts/CourierPrime-Regular.ttf') format('truetype');
}

/* Global */
* {
  font-family: var(--v-font)
}
.container {
  padding-left: calc(var(--ifm-spacing-horizontal) * 2);
}

.container article {
  padding-top: 1rem;
}

aside ul {
  padding-top: 0.5rem;
}

/* Code */
code,
pre,
code span,
pre span {
  font-family: var(--v-font-mono) !important; 
  border-radius: 3px !important;
}
code {
  padding: 0.15rem 0.35rem 0;
}
.container code {
  background: var(--v-gray3);
}
.container code span:not(.comment) {
  
}
html[data-theme='dark'] .navbar {
  background: var(--ifm-navbar-background-color) !important;
}
html[data-theme='dark'] .navbar__inner {
  background: var(--ifm-navbar-background-color) !important;
}
html[data-theme='dark'] .navbar__toggle {
  color: var(--ifm-font-color-base);
}

html[data-theme='dark'] .container code {
  background: var(--ifm-navbar-background-color);
}
html[data-theme='dark'] .container code span.comment {
  color: var(--v-gray1) !important;
}

/* Header */
.navbar__brand img, aside img {
  margin-left: 0.5rem;
}
.navbar__item {
  
}
.navbar__item span {
  
}
.header-icon {
  position: relative;
  top: -2px;
}
.header-icon:before {
  position: relative;
  top: 6px;
  content: "";
  display: flex;
  height: 24px;
  width: 24px;
  display: inline-block;
  margin-right: 5px; 
}
.header-icon span {
  display: inline;
  color: var(--v-red);
}
/* ... */

